# Socialmediaapp

./: Dockerfile  compose.dev.yaml  compose.prod.yaml  compose.yaml  pyproject.toml
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 1c5db8258060_create_posts_table.py  286e13afc7db_add_last_few_columns_to_posts_table.py  3043fba0aaa5_auto_vote.py  3f175e5db992_add_content_column_to_posts_table.py  436ce3931830_add_last_few_columns_to_posts_table.py  58dc5dd97b56_add_foreign_key_to_posts_table.py  677df16e5029_add_phone_number.py  8624ae80793b_add_foreign_key_to_posts_table.py  acdff21f34c9_add_column_to_posts_table.py  cb6d845d30d2_add_user_table.py  ce111ca29ff3_auto_vote.py  da49d06357dd_create_posts_table.py  e4c15203d567_add_user_table.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  post.py  user.py  vote.py
tests/: conftest.py  database.py  test_posts.py  test_users.py  test_votes.py
